--- a/BattleTank_Sub/BattleTank_Sub.uproject
+++ b/BattleTank_Sub/BattleTank_Sub.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "BattleTank_Sub",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"AIModule"
+			]
 		}
 	]
 }
