--- a/BattleTank_Sub/Config/DefaultInput.ini
+++ b/BattleTank_Sub/Config/DefaultInput.ini
@@ -46,6 +46,7 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Left)
++ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="AImAzimuth",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="AImAzimuth",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
