--- a/BattleTank_Sub/Config/DefaultInput.ini
+++ b/BattleTank_Sub/Config/DefaultInput.ini
@@ -47,15 +47,17 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Left)
 +ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +AxisMappings=(AxisName="AImAzimuth",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="AImAzimuth",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="AimElevation",Scale=-1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="LeftTrackThrottle",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
 +AxisMappings=(AxisName="LeftTrackThrottle",Scale=-0.500000,Key=Gamepad_LeftShoulder)
 +AxisMappings=(AxisName="RightTrackThrottle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
 +AxisMappings=(AxisName="RightTrackThrottle",Scale=-0.500000,Key=Gamepad_RightShoulder)
++AxisMappings=(AxisName="ForwardMovement",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="TurnRight",Scale=1.000000,Key=Gamepad_LeftX)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
